Trello 504: New API to return polygon based on lat,lng and polygon side length
